Always listen on localhost for /mod_cluster_manager
This makes it easy to setup SSH forwards to monitor
mod_cluster_manager remotely.

--- a/mod_cluster/templates/default/mods/manager.conf.erb
+++ b/mod_cluster/templates/default/mods/manager.conf.erb
@@ -1,4 +1,5 @@
 <IfModule manager_module>
+  Listen 127.0.0.1:<%= node[:mod_cluster][:mcpm_port] %>
   Listen <%= node[:mod_cluster][:mcpm_bind_ip] %>:<%= node[:mod_cluster][:mcpm_port] %>
   ManagerBalancerName <%= node[:mod_cluster][:balancer_name] %>
   MemManagerFile <%= node[:mod_cluster][:mod_cluster_dir] %>
@@ -13,7 +14,9 @@
     EnableMCPMReceive
     KeepAliveTimeout 300
     MaxKeepAliveRequests 0
+  </VirtualHost>
 
+  <VirtualHost 127.0.0.1:<%= node[:mod_cluster][:mcpm_port] %>>
     <Location /mod_cluster_manager>
        SetHandler mod_cluster-manager
        Order deny,allow
@@ -21,6 +24,5 @@
        Allow from 127.0.0
        AllowDisplay On
     </Location>
-
   </VirtualHost>
 </IfModule>
