--- a/mod_cluster/templates/default/mods/manager.conf.erb
+++ b/mod_cluster/templates/default/mods/manager.conf.erb
@@ -1,6 +1,6 @@
 <IfModule manager_module>
   Listen 127.0.0.1:<%= node[:mod_cluster][:mcpm_port] %>
-  Listen <%= node[:mod_cluster][:bind_ip_resolved] %>:<%= node[:mod_cluster][:mcpm_port] %>
+  Listen <%= node[:mod_cluster][:mcpm_bind_ip_resolved] %>:<%= node[:mod_cluster][:mcpm_port] %>
   ManagerBalancerName <%= node[:mod_cluster][:balancer_name] %>
   MemManagerFile <%= node[:mod_cluster][:mod_cluster_dir] %>
 
