--- a/torquebox/templates/default/standalone-ha-2.0.x-incremental.xml.erb
+++ b/torquebox/templates/default/standalone-ha-2.0.x-incremental.xml.erb
@@ -1,7 +1,7 @@
 <%- peers = @options[:peers] || [] %>
 <%- proxy_list = @options[:mod_cluster_proxies] || [] %>
 <?xml version='1.0' encoding='UTF-8'?> 
-<server xmlns='urn:jboss:domain:1.2'>
+<server xmlns='urn:jboss:domain:1.3'>
     <extensions>
         <extension module='org.jboss.as.clustering.infinispan'/>
         <extension module='org.jboss.as.clustering.jgroups'/>
@@ -53,13 +53,18 @@
         <security-realms>
             <security-realm name='ManagementRealm'>
                 <authentication>
+                    <local default-user='$local'/>
                     <properties path='mgmt-users.properties' relative-to='jboss.server.config.dir'/>
                 </authentication>
             </security-realm>
             <security-realm name='ApplicationRealm'>
                 <authentication>
+                    <local default-user='$local' allowed-users='*'/>
                     <properties path='application-users.properties' relative-to='jboss.server.config.dir'/>
                 </authentication>
+                <authorization>
+                    <properties path='application-roles.properties' relative-to='jboss.server.config.dir'/>
+                </authorization>
             </security-realm>
         </security-realms>
         <management-interfaces>
@@ -115,7 +120,7 @@
         </subsystem>
         <subsystem xmlns='urn:jboss:domain:cmp:1.0'/>
         <subsystem xmlns='urn:jboss:domain:configadmin:1.0'/>
-        <subsystem xmlns='urn:jboss:domain:datasources:1.0'>
+        <subsystem xmlns='urn:jboss:domain:datasources:1.1'>
             <datasources>
                 <datasource jndi-name='java:jboss/datasources/ExampleDS' pool-name='ExampleDS' enabled='true' use-java-context='true'>
                     <connection-url>
@@ -145,8 +150,15 @@
         <subsystem xmlns='urn:jboss:domain:deployment-scanner:1.1'>
             <deployment-scanner path='deployments' relative-to='jboss.server.base.dir' scan-interval='5000' deployment-timeout='1200'/>
         </subsystem>
-        <subsystem xmlns='urn:jboss:domain:ee:1.0'/>
-        <subsystem xmlns='urn:jboss:domain:ejb3:1.2'>
+        <subsystem xmlns='urn:jboss:domain:ee:1.1'>
+            <spec-descriptor-property-replacement>
+                false
+            </spec-descriptor-property-replacement>
+            <jboss-descriptor-property-replacement>
+                true
+            </jboss-descriptor-property-replacement>
+        </subsystem>
+        <subsystem xmlns='urn:jboss:domain:ejb3:1.3'>
             <session-bean>
                 <stateless>
                     <bean-instance-pool-ref pool-name='slsb-strict-max-pool'/>
@@ -186,27 +198,27 @@
             </thread-pools>
             <iiop enable-by-default='false' use-qualified-name='false'/>
         </subsystem>
-        <subsystem xmlns='urn:jboss:domain:infinispan:1.2' default-cache-container='cluster'>
+        <subsystem xmlns='urn:jboss:domain:infinispan:1.3'>
             <cache-container name='cluster' aliases='ha-partition' default-cache='default'>
                 <transport lock-timeout='60000'/>
                 <replicated-cache name='default' mode='SYNC' batching='true'>
                     <locking isolation='REPEATABLE_READ'/>
                 </replicated-cache>
             </cache-container>
-            <cache-container name='web' aliases='torquebox standard-session-cache' default-cache='repl'>
+            <cache-container name='web' aliases='torquebox standard-session-cache' default-cache='repl' module='org.jboss.as.clustering.web.infinispan'>
                 <transport lock-timeout='60000'/>
                 <replicated-cache name='repl' mode='ASYNC' batching='true'>
                     <file-store/>
                 </replicated-cache>
                 <replicated-cache name='sso' mode='SYNC' batching='true'/>
-                <distributed-cache name='dist' mode='ASYNC' batching='true'>
+                <distributed-cache name='dist' mode='ASYNC' batching='true' l1-lifespan='0'>
                     <file-store/>
                 </distributed-cache>
             </cache-container>
-            <cache-container name='ejb' aliases='sfsb sfsb-cache' default-cache='repl'>
+            <cache-container name='ejb' aliases='sfsb sfsb-cache' default-cache='repl' module='org.jboss.as.clustering.ejb3.infinispan'>
                 <transport lock-timeout='60000'/>
                 <replicated-cache name='repl' mode='ASYNC' batching='true'>
-                    <eviction strategy='LRU'/>
+                    <eviction strategy='LRU' max-entries='10000'/>
                     <file-store/>
                 </replicated-cache>
                 <!--
@@ -214,12 +226,12 @@
                   ~                 the socketbinding referenced by the EJB remoting connector 
                   -->
                 <replicated-cache name='remote-connector-client-mappings' mode='SYNC' batching='true'/>
-                <distributed-cache name='dist' mode='ASYNC' batching='true'>
-                    <eviction strategy='LRU'/>
+                <distributed-cache name='dist' mode='ASYNC' batching='true' l1-lifespan='0'>
+                    <eviction strategy='LRU' max-entries='10000'/>
                     <file-store/>
                 </distributed-cache>
             </cache-container>
-            <cache-container name='hibernate' default-cache='local-query'>
+            <cache-container name='hibernate' default-cache='local-query' module='org.jboss.as.jpa.hibernate:4'>
                 <transport lock-timeout='60000'/>
                 <local-cache name='local-query'>
                     <transaction mode='NONE'/>
@@ -237,8 +249,8 @@
                 </replicated-cache>
             </cache-container>
         </subsystem>
-        <subsystem xmlns='urn:jboss:domain:jacorb:1.1'>
-            <orb>
+        <subsystem xmlns='urn:jboss:domain:jacorb:1.2'>
+            <orb socket-binding='jacorb' ssl-socket-binding='jacorb-ssl'>
                 <initializers transactions='spec' security='on'/>
             </orb>
         </subsystem>
@@ -282,6 +294,7 @@
                 <protocol type='UFC'/>
                 <protocol type='MFC'/>
                 <protocol type='FRAG2'/>
+                <protocol type='RSVP'/>
             </stack>
             <stack name='tcp'>
                 <transport type='TCP' socket-binding='jgroups-tcp' diagnostics-socket-binding='jgroups-diagnostics'/>
@@ -302,6 +315,7 @@
                 <protocol type='UFC'/>
                 <protocol type='MFC'/>
                 <protocol type='FRAG2'/>
+                <protocol type='RSVP'/>
             </stack>
         </subsystem>
         <subsystem xmlns='urn:jboss:domain:jmx:1.1'>
@@ -317,11 +331,14 @@
                 <smtp-server outbound-socket-binding-ref='mail-smtp'/>
             </mail-session>
         </subsystem>
-        <subsystem xmlns='urn:jboss:domain:messaging:1.1'>
+        <subsystem xmlns='urn:jboss:domain:messaging:1.2'>
             <hornetq-server>
                 <clustered>
                     true
                 </clustered>
+                <cluster-password>
+                    ${jboss.messaging.cluster.password:CHANGE ME!!}
+                </cluster-password>
                 <persistence-enabled>
                     true
                 </persistence-enabled>
@@ -351,25 +368,25 @@
                 </acceptors>
                 <broadcast-groups>
                     <broadcast-group name='bg-group1'>
+                        <socket-binding>
+                            messaging-group
+                        </socket-binding>
                         <broadcast-period>
                             5000
                         </broadcast-period>
                         <connector-ref>
                             netty
                         </connector-ref>
-                        <socket-binding>
-                            messaging-group
-                        </socket-binding>
                     </broadcast-group>
                 </broadcast-groups>
                 <discovery-groups>
                     <discovery-group name='dg-group1'>
-                        <refresh-timeout>
-                            10000
-                        </refresh-timeout>
                         <socket-binding>
                             messaging-group
                         </socket-binding>
+                        <refresh-timeout>
+                            10000
+                        </refresh-timeout>
                     </discovery-group>
                 </discovery-groups>
                 <cluster-connections>
@@ -380,13 +397,13 @@
                         <connector-ref>
                             netty
                         </connector-ref>
-                      <static-connectors>
-                        <%- peers.each_with_index do |peer, index| %>
-                          <connector-ref>
-                            server<%= index %>-connector
-                          </connector-ref>
-                        <%- end %>
-                      </static-connectors>
+                        <static-connectors>
+                          <%- peers.each_with_index do |peer, index| %>
+                            <connector-ref>
+                              server<%= index %>-connector
+                            </connector-ref>
+                          <%- end %>
+                        </static-connectors>
                     </cluster-connection>
                 </cluster-connections>
                 <security-settings>
@@ -440,7 +457,6 @@
                             <connector-ref connector-name='netty'/>
                         </connectors>
                         <entries>
-                            <entry name='RemoteConnectionFactory'/>
                             <entry name='java:jboss/exported/jms/RemoteConnectionFactory'/>
                         </entries>
                         <consumer-window-size>
@@ -457,14 +473,6 @@
                         </entries>
                     </pooled-connection-factory>
                 </jms-connection-factories>
-                <jms-destinations>
-                </jms-destinations>
-                <cluster-user>
-                    admin
-                </cluster-user>
-                <cluster-password>
-                    password
-                </cluster-password>
                 <jmx-management-enabled>
                     true
                 </jmx-management-enabled>
@@ -473,14 +481,16 @@
                 </security-enabled>
             </hornetq-server>
         </subsystem>
-        <subsystem xmlns='urn:jboss:domain:modcluster:1.0'>
-            <mod-cluster-config <%- unless proxy_list.empty? %>proxy-list='<%= proxy_list.map{ |p| "#{p}:#{@options[:mod_cluster_mcpm_port]}"}.join(',') %>'<% end %> excluded-contexts='invoker,jbossws,juddi,console'>
+        <subsystem xmlns='urn:jboss:domain:modcluster:1.1'>
+            <mod-cluster-config advertise='false' <%- unless proxy_list.empty? %>proxy-list='<%= proxy_list.map{ |p| "#{p}:#{@options[:mod_cluster_mcpm_port]}"}.join(',') %>'<% end %> connector='ajp' excluded-contexts='invoker,jbossws,juddi,console'>
                 <dynamic-load-provider>
                     <load-metric type='busyness'/>
                 </dynamic-load-provider>
             </mod-cluster-config>
         </subsystem>
-        <subsystem xmlns='urn:jboss:domain:naming:1.1'/>
+        <subsystem xmlns='urn:jboss:domain:naming:1.2'>
+            <remote-naming/>
+        </subsystem>
         <subsystem xmlns='urn:jboss:domain:osgi:1.2' activation='lazy'>
             <properties>
                 <!-- Specifies the beginning start level of the framework -->
@@ -505,17 +515,14 @@
         </subsystem>
         <subsystem xmlns='urn:jboss:domain:resource-adapters:1.0'/>
         <subsystem xmlns='urn:jboss:domain:sar:1.0'/>
-        <subsystem xmlns='urn:jboss:domain:security:1.1'>
+        <subsystem xmlns='urn:jboss:domain:security:1.2'>
             <security-domains>
                 <security-domain name='other' cache-type='default'>
                     <authentication>
                         <login-module code='Remoting' flag='optional'>
                             <module-option name='password-stacking' value='useFirstPass'/>
                         </login-module>
-                        <login-module code='RealmUsersRoles' flag='required'>
-                            <module-option name='usersProperties' value='${jboss.server.config.dir}/application-users.properties'/>
-                            <module-option name='rolesProperties' value='${jboss.server.config.dir}/application-roles.properties'/>
-                            <module-option name='realm' value='ApplicationRealm'/>
+                        <login-module code='RealmDirect' flag='required'>
                             <module-option name='password-stacking' value='useFirstPass'/>
                         </login-module>
                     </authentication>
@@ -533,7 +540,7 @@
             </security-domains>
         </subsystem>
         <subsystem xmlns='urn:jboss:domain:threads:1.1'/>
-        <subsystem xmlns='urn:jboss:domain:transactions:1.1'>
+        <subsystem xmlns='urn:jboss:domain:transactions:1.2'>
             <core-environment>
                 <process-id>
                     <uuid/>
@@ -608,6 +615,7 @@
         <socket-binding name='jgroups-udp' port='55200' multicast-address='${jboss.default.multicast.address:230.0.0.4}' multicast-port='45688'/>
         <socket-binding name='jgroups-udp-fd' port='54200'/>
         <socket-binding name='messaging' port='5445'/>
+        <socket-binding name='messaging-group' port='0' multicast-address='${jboss.messaging.group.address:231.7.7.7}' multicast-port='${jboss.messaging.group.port:9876}'/>
         <socket-binding name='messaging-throughput' port='5455'/>
         <socket-binding name='modcluster' port='0' multicast-address='224.0.1.105' multicast-port='23364'/>
         <socket-binding name='osgi-http' interface='management' port='8090'/>
@@ -623,6 +631,5 @@
           </outbound-socket-binding>
         <%- end %>
         <socket-binding name='stomp' port='8675'/>
-        <socket-binding name='messaging-group' port='0' multicast-address='${jboss.messaging.group.address:231.7.7.7}' multicast-port='${jboss.messaging.group.port:9876}'/>
     </socket-binding-group>
 </server>
