--- a/mod_cluster/templates/default/mods/manager.conf.erb
+++ b/mod_cluster/templates/default/mods/manager.conf.erb
@@ -2,7 +2,7 @@
   Listen 127.0.0.1:<%= node[:mod_cluster][:mcpm_port] %>
   Listen <%= node[:mod_cluster][:mcpm_bind_ip_resolved] %>:<%= node[:mod_cluster][:mcpm_port] %>
   ManagerBalancerName <%= node[:mod_cluster][:balancer_name] %>
-  MemManagerFile <%= node[:mod_cluster][:mod_cluster_dir] %>
+  MemManagerFile <%= node[:mod_cluster][:mod_cluster_dir] %>/manager
 
   <VirtualHost <%= node[:mod_cluster][:mcpm_bind_ip_resolved] %>:<%= node[:mod_cluster][:mcpm_port] %>>
     <Location />
