--- a/torquebox/templates/default/standalone-ha.xml.erb
+++ b/torquebox/templates/default/standalone-ha.xml.erb
@@ -206,7 +206,7 @@
             <cache-container name='ejb' aliases='sfsb sfsb-cache' default-cache='repl'>
                 <transport lock-timeout='60000'/>
                 <replicated-cache name='repl' mode='ASYNC' batching='true'>
-                    <eviction strategy='LRU'/>
+                    <eviction strategy='LRU' max-entries='10000'/>
                     <file-store/>
                 </replicated-cache>
                 <!--
@@ -215,7 +215,7 @@
                   -->
                 <replicated-cache name='remote-connector-client-mappings' mode='SYNC' batching='true'/>
                 <distributed-cache name='dist' mode='ASYNC' batching='true'>
-                    <eviction strategy='LRU'/>
+                    <eviction strategy='LRU' max-entries='10000'/>
                     <file-store/>
                 </distributed-cache>
             </cache-container>
