--- a/torquebox/templates/default/standalone-ha-2.0.x-incremental.xml.erb
+++ b/torquebox/templates/default/standalone-ha-2.0.x-incremental.xml.erb
@@ -35,7 +35,6 @@
         <extension module='org.jboss.as.weld'/>
         <extension module='org.torquebox.bootstrap'/>
         <extension module='org.torquebox.core'/>
-        <extension module='org.torquebox.cache'/>
         <extension module='org.torquebox.cdi'/>
         <extension module='org.torquebox.jobs'/>
         <extension module='org.torquebox.messaging'/>
@@ -44,6 +43,7 @@
         <extension module='org.torquebox.stomp'/>
         <extension module='org.torquebox.web'/>
         <extension module='org.projectodd.polyglot.hasingleton'/>
+        <extension module='org.projectodd.polyglot.cache'/>
     </extensions>
     <system-properties>
         <property name='org.apache.tomcat.util.http.ServerCookie.FWD_SLASH_IS_SEPARATOR' value='false'/>
@@ -205,9 +205,9 @@
                     <locking isolation='REPEATABLE_READ'/>
                 </replicated-cache>
             </cache-container>
-            <cache-container name='web' aliases='torquebox standard-session-cache' default-cache='repl' module='org.jboss.as.clustering.web.infinispan'>
+            <cache-container name='web' aliases='polyglot torquebox standard-session-cache' default-cache='repl' module='org.jboss.as.clustering.web.infinispan'>
                 <transport lock-timeout='60000'/>
-                <replicated-cache name='repl' mode='ASYNC' batching='true'>
+                <replicated-cache name='repl' mode='ASYNC' batching='true' start='EAGER'>
                     <file-store/>
                 </replicated-cache>
                 <replicated-cache name='sso' mode='SYNC' batching='true'/>
@@ -574,7 +574,6 @@
         <subsystem xmlns='urn:jboss:domain:weld:1.0'/>
         <subsystem xmlns='urn:jboss:domain:torquebox-bootstrap:1.0'/>
         <subsystem xmlns='urn:jboss:domain:torquebox-core:1.0'/>
-        <subsystem xmlns='urn:jboss:domain:torquebox-cache:1.0'/>
         <subsystem xmlns='urn:jboss:domain:torquebox-cdi:1.0'/>
         <subsystem xmlns='urn:jboss:domain:torquebox-jobs:1.0'/>
         <subsystem xmlns='urn:jboss:domain:torquebox-messaging:1.0'/>
@@ -583,6 +582,7 @@
         <subsystem xmlns='urn:jboss:domain:torquebox-stomp:1.0' socket-binding='stomp'/>
         <subsystem xmlns='urn:jboss:domain:torquebox-web:1.0'/>
         <subsystem xmlns='urn:jboss:domain:polyglot-hasingleton:1.0'/>
+        <subsystem xmlns='urn:jboss:domain:polyglot-cache:1.0'/>
     </profile>
     <interfaces>
         <interface name='management'>
